# embedai

./: .env.example  .gitignore  Makefile  README.md  go.work  go.work.sum
docs/: article-claude-code-dev.md
docs/design-catalog/: README.md  big-picture.mmd  decisions.md  requirements.md
docs/design-catalog/data/: erd.mmd  state-annotation-task.mmd  state-episode.mmd
docs/design-catalog/flows/: sequence-annotation-workflow.mmd  sequence-export.mmd  sequence-upload.mmd
docs/design-catalog/processes/: process-annotation.mmd  process-data-ingestion.mmd  process-dataset-export.mmd
docs/plans/: 2026-03-06-embedai-datahub.md  2026-03-10-mcap-file-cache.md  2026-03-10-mcap-preview-bugfix-404.md  2026-03-10-mcap-preview-design.md  2026-03-10-mcap-preview-implementation.md  2026-03-10-mcap-preview-test-design.md
docs/superpowers/plans/: 2026-03-11-annotator-annotation-interface.md
docs/superpowers/specs/: 2026-03-11-annotator-annotation-interface-design.md
infra/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
infra/config/: postgres-init.sql
services/dataset-service/: Dockerfile  pyproject.toml
services/dataset-service/app/: auth.py  config.py  main.py  models.py  storage.py
services/dataset-service/app/routers/: datasets.py  episodes.py  exports.py
services/dataset-service/app/services/: cache_registry.py  frame_extractor.py  mcap_cache.py
services/dataset-service/tests/: conftest.py  test_datasets_api.py  test_episodes_api.py  test_frame_api.py  test_frame_extractor.py  test_mcap_cache.py
services/dataset-service/tests/integration/: __init__.py  test_frame_extractor_integration.py
services/dataset-service/tests/integration/testdata/: generate_test_data.py
services/export-worker/: Dockerfile  pyproject.toml
services/export-worker/tests/: conftest.py  test_webdataset_exporter.py
services/export-worker/worker/: config.py  database.py  main.py  models.py
services/export-worker/worker/exporters/: raw.py  webdataset.py
services/gateway/: Dockerfile  go.mod  go.sum  main.go
services/gateway/internal/config/: config.go
services/gateway/internal/events/: publisher.go
services/gateway/internal/grpc/: frame_buffer.go  stream_server.go  (+1 more)
services/pipeline/: Dockerfile  pyproject.toml
services/pipeline/pipeline/: db.py  main.py  processor.py  storage.py  worker.py
services/pipeline/pipeline/extractors/: hdf5_extractor.py  mcap_extractor.py  models.py
services/pipeline/pipeline/quality/: scorer.py
services/pipeline/tests/: conftest.py  make_fixtures.py  test_hdf5_extractor.py  test_mcap_extractor.py  test_processor.py  test_quality_scorer.py  test_worker.py
services/pipeline/tests/fixtures/: sample.hdf5  sample.mcap
services/task-service/: pyproject.toml
services/task-service/app/: auth.py  config.py  database.py  main.py  models.py
services/task-service/tests/: conftest.py  test_annotation_result.py  test_label_studio_integration.py  test_tasks_api.py  test_webhooks.py
shared/migrations/: alembic.ini  env.py  pyproject.toml  seed.py
shared/migrations/versions/: 001_initial_schema.py  002_export_jobs_updated_at.py  003_annotation_tasks_episode_id.py  004_annotation_tasks_result.py
shared/proto/: Makefile  episode.proto  stream.proto
shared/python_proto/: episode_pb2.py  episode_pb2_grpc.py  stream_pb2.py  stream_pb2_grpc.py
tests/: pyproject.toml
tests/e2e/: conftest.py  helpers.py  test_annotation_workflow.py  test_auth.py  test_datasets.py  test_episodes.py  test_exports.py  test_gateway.py  test_mcap_preview.py  test_rbac.py  test_tasks.py  test_upload_to_export.py  test_user_workload.py
web/: Dockerfile  nginx.conf.template  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx
web/src/api/: client.ts  datasets.ts  episodes.ts  tasks.ts
web/src/components/: AnnotationSidebar.tsx  EpisodeCard.tsx  EpisodeDetailModal.tsx  Layout.tsx  Pagination.tsx  QualityBadge.tsx  Spinner.tsx  TimelineControl.tsx  ToastContainer.tsx  VideoGrid.tsx
web/src/hooks/: useMcapFrames.ts
web/src/pages/: DatasetsPage.tsx  EpisodesPage.tsx  ExportPage.tsx  LoginPage.tsx  PreviewPage.tsx  TasksPage.tsx  UploadPage.tsx
web/src/store/: auth.ts  toast.ts
(+22 files in other folders)
