[project]
name = "embedai-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcap>=1.1.0",
    "mcap-ros2-support>=0.4",
    "h5py>=3.10",
    "minio>=7.2",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pydantic>=2.5",
    "loguru>=0.7",
    "fastapi>=0.111",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
